[package]
name = "exa"
version = "1.1.0"
edition = "2021"
description = "AI-powered web search via Exa API"
license = "MIT"
repository = "https://github.com/Finesssee/exa-cli-rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
colored = "2"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
