[package]
name = "exa-cli"
version = "1.3.0"
edition = "2021"
description = "AI-powered web search, content extraction, and deep research via Exa API"
license = "MIT"
repository = "https://github.com/Finesssee/exa-cli"
readme = "../README.md"
keywords = ["exa", "search", "ai", "cli", "web"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "exa"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
colored = "2"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
